tests/negative/type_arg_count_too_many.uzpp
// XATOLIK_KUTILMOQDA: arg_count: argumentlar ortiqcha
ulash "uzpp_runtime.hpp"
butun qosh(butun a, butun b) { qaytarish a + b; }
butun asosiy() {
    butun s = qosh(1, 2, 3);
    qaytarish 0;
}
